# femio

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  3d_compress.py  LICENSE  README.md  daikin.py  femio-0.3.2-py3-none-any.whl  femio-0.3.3-py3-none-any.whl  femio.formats.html  femio.html  femio.util.html  genindex.html  index.html  mesh_compressor.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.doctrees/: environment.pickle  femio.doctree  femio.formats.doctree  femio.util.doctree  index.doctree  modules.doctree  sg_execution_times.doctree
.doctrees/examples/: 00_basic.doctree  index.doctree  sg_execution_times.doctree
.github/workflows/: gh-pages.yml
_downloads/27a6be9ceb8322f00fefe2cc4d6bc003/: 00_basic.ipynb
_sources/: femio.rst.txt  femio.util.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/examples/: 00_basic.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docker/: Dockerfile  Makefile
docs/: femio.formats.html  femio.html  modules.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  femio.doctree  femio.formats.doctree  femio.util.doctree  index.doctree  modules.doctree
examples/: 00_basic.html  00_basic.py  README.rst  hex.vtk  index.html  sg_execution_times.html
femio/: __init__.py  config.py  fem_attribute.py  fem_attributes.py  fem_data.py  fem_elemental_attribute.py  fem_writer.py  functions.py  geometry_processor.py  graph_processor.py  io.py  mesh_compressor.py  nodal_data.py  signal_processor.py  time_series_dataframe.py
sphinx/: conf.py  index.rst
tests/: test_fem_attribute.py  test_fem_attributes.py  test_fem_data.py  test_functions.py  test_geometry_processor.py  test_graph_processor.py  test_io.py  test_mesh_compressor.py  test_signal_processor.py
(+313 files in other folders)
