[tool.poetry]
name = "femio"
version = "0.3.2"
description = "FEM I/O Tool"
authors = ["RICOS Co. Ltd."]
readme = "README.md"
repository = "https://github.com/ricosjp/femio"
documentation = "https://ricosjp.github.io/femio/"

[tool.poetry.dependencies]
python = "^3.6.1"

matplotlib   = "^3.1"
meshio       = "^3.3"
networkx     = "^2.4"
numpy        = "^1.17"
numpy-stl    = "^2.13"
pandas       = "^1.0"
scikit-learn = "^0.22.0"
scipy        = "^1.4"
PyQt5 = {version = "^5.14.0", optional = true}

[tool.poetry.extras]
PyQt5 = ["PyQt5"]

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
pytest = "^5.3"

[tool.poetry.scripts]
femconvert           = "femio.__main__.femconvert:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
