[tool.poetry]
name = "femio"
version = "0.3.2"
description = "FEM I/O Tool"
authors = ["RICOS Co. Ltd."]
readme = "README.md"
repository = "https://github.com/ricosjp/femio"
documentation = "https://ricosjp.github.io/femio/"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"

kiwisolver   = "==1.0.1"
matplotlib   = "^3.1"
meshio       = "^3.3"
networkx     = "^2.4"
numba        = "^0.53.1"
numpy        = "^1.20"
numpy-stl    = "^2.13"
pandas       = "^1.0"
scikit-learn = "^0.24.0"
scipy        = "^1.7.0"
lxml = "^4.6.3"
PyQt5 = {version = "^5.14.0", optional = true}
vtk = {version = "^9.0.3", optional = true}
mayavi = {version = "^4.7.3", optional = true}

[tool.poetry.extras]
PyQt5 = ["PyQt5"]

[tool.poetry.dev-dependencies]
pylint = "^2.4"
autopep8 = "^1.4"
pytest = "^5.3"

[tool.poetry.scripts]
femconvert           = "femio.__main__.femconvert:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
